k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: game-ctrl
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: game-ctrl
