k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ctrl-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - game-ctrl.com
    secretName: game-ctrl-tls
  rules:
  - host: game-ctrl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-ctrl
            port:
              number: 80
